--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images/Photo.png" alt="arabi-profile-img">
+      <img src="images/Photo.png" class="photo" alt="arabi-profile-img">
       <h2>Hello.</h2>
       <p class="intro">I am an Web Developer and Data Scientist. I'm the founder and CTO of The Arabian Logs. I ❤️ coffee and Motorcycles.</p>
     </div>
