--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="images/Photo.png" class="photo" alt="arabi-profile-img">
       <h2>Hello.</h2>
-      <p class="intro">I am an Web Developer and Data Scientist. I'm the founder and CTO of The Arabian Logs. I ❤️ coffee and Motorcycles.</p>
+      <p class="intro">I am an Web Developer and Data Scientist, who ❤️ coffee and Motorcycles.</p>
     </div>
     <hr>
     <div class="skills">
@@ -39,7 +39,7 @@
             style="width:150px;height:120px;top: 50px;">
         </lord-icon>
         <h3>Design & Development</h3>
-        <p>I started learning to code when I was 21 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
+        <p>I started learning to code when I was 21 years old because I wanted to make my own Web and Mobile Apps. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
 
       </div>
       <div class="skill-row">
